--- a/authAPP/src/app/register/register.component.html
+++ b/authAPP/src/app/register/register.component.html
@@ -18,7 +18,7 @@
               <label>Password</label>
               <input type="password" [(ngModel)]="registerUserData.password" name="password" class="form-control rounded-0"  required>
             </div>
-            <button type="button" (click)="registerUser()" class="btn btn-primary float-right">Register</button>
+            <button type="button" (click)="registerUser()" class="btn btn-success float-right">Register</button>
           </form>
         </div>
         <!--/card-block-->
